--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,22 @@
 }
 
 .header{
-    margin-left: 160px;
+  color: rgb(253, 11, 11);
+  height: 80px; /* Full-height: remove this if you want "auto" height */
+  width: 100%; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: rgb(0, 255, 136); /* Black */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 20px;
+  float: left;
+}
+
+.fa{
+  color: rgb(77, 37, 6);
+  font-size: 50px;
 }
 
 .siteContent{
@@ -31,6 +46,7 @@
 
 /* The sidebar menu */ /* source @ https://www.w3schools.com/howto/howto_css_fixed_sidebar.asp */
 .sidebar {
+    margin-top: 100px;
     color: white;
     height: 100%; /* Full-height: remove this if you want "auto" height */
     width: 160px; /* Set the width of the sidebar */
