--- a/css/style.css
+++ b/css/style.css
@@ -22,21 +22,21 @@
 }
 
 .header{
-  color: rgb(253, 11, 11);
-  height: 80px; /* Full-height: remove this if you want "auto" height */
-  width: 100%; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
-  background-color: rgb(0, 255, 136); /* Black */
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
-  float: left;
+  /* color: rgb(253, 11, 11);
+  height: 10px; /* Full-height: remove this if you want "auto" height */
+  /* width: 100%; /* Set the width of the sidebar */
+  /*position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  /*z-index: 1; /* Stay on top */
+  /*top: 0; /* Stay at the top */
+  /*left: 0;
+  /*background-color: rgb(0, 255, 136); /* Black */
+  /*overflow-x: hidden; /* Disable horizontal scroll */
+  /*padding-top: 20px;
+  /*float: left; */
 }
 
 .fa{
-  color: rgb(77, 37, 6);
+  color: rgb(255, 255, 255);
   font-size: 50px;
 }
 
