--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@
   /*background-color: rgb(0, 255, 136); /* Black */
   /*overflow-x: hidden; /* Disable horizontal scroll */
   /*padding-top: 20px;
-  /*float: left; 
+  /*float: left;*/ 
 
 
 .fa{
