--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,19 @@
 
 
 .categoryBtn{
-    width: 100%;
+    width: 120px;
     height: 100px;
-    padding: 20px;
+    /* margin: 0 auto; */
     margin-top: 20px;
     background-color: rgb(252, 247, 247);
     border: none;
     border-radius: 20%;
     transition-duration: 0.2s;
+}
+
+.categoryLogo{
+  margin: 0 auto;
+  width: 60px;
 }
 
 .categoryBtn:hover{
@@ -83,19 +88,40 @@
 
 /* The sidebar menu */ /* source @ https://www.w3schools.com/howto/howto_css_fixed_sidebar.asp */
 .sidebar {
+    overflow: hidden;
     color: rgb(0, 0, 0);
     font-family: 'Roboto', sans-serif;
     font-weight:900;
     height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 160px; /* Set the width of the sidebar */
+    width: 160px; /*Set the width of the sidebar*/
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
+    z-index: 1; 
     top: 0; /* Stay at the top */
     left: 0;
     background-color: rgb(0, 0, 0); /* Black */
     overflow-x: hidden; /* Disable horizontal scroll */
+    
   }
   
+.CategoryBtnContainer{
+  /* overflow: hidden; */
+  overflow-y: scroll;
+  width: 100%;
+  height: 94%;
+  margin: 20px;
+}
+
+.titleContainer{
+  width: 100%;
+  height: 50px;
+}
+
+.title{
+  text-align: center;
+  width: 100%;
+  font-size: 1.5vw;
+  color: aqua;
+}
 .ueberschrift{
   font-family: 'Roboto', sans-serif;
   text-align: center;
@@ -103,6 +129,7 @@
   border-spacing: 100px;
   border-style: solid;
   border-color: #E9D2B0;
+  margin-left: 160px;
   
   
   
