--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     width: 120px;
     height: 100px;
     /* margin: 0 auto; */
-    margin-top: 20px;
+    margin-bottom: 20px;
     background-color: rgb(252, 247, 247);
     border: none;
     border-radius: 20%;
@@ -88,10 +88,6 @@
 
 /* The sidebar menu */ /* source @ https://www.w3schools.com/howto/howto_css_fixed_sidebar.asp */
 .sidebar {
-    overflow: hidden;
-    color: rgb(0, 0, 0);
-    font-family: 'Roboto', sans-serif;
-    font-weight:900;
     height: 100%; /* Full-height: remove this if you want "auto" height */
     width: 160px; /*Set the width of the sidebar*/
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
@@ -100,6 +96,7 @@
     left: 0;
     background-color: rgb(0, 0, 0); /* Black */
     overflow-x: hidden; /* Disable horizontal scroll */
+    overflow: hidden;
     
   }
   
@@ -107,20 +104,29 @@
   /* overflow: hidden; */
   overflow-y: scroll;
   width: 100%;
-  height: 94%;
+  height: 95%;
   margin: 20px;
+  overflow-x: hidden; /* Disable horizontal scroll */
 }
 
 .titleContainer{
   width: 100%;
   height: 50px;
+  overflow: hidden;
+  color: rgb(0, 0, 0);
+  background-color: #E9D2B0;
+  font-family: 'Roboto', sans-serif;
+  font-weight:900;
 }
 
 .title{
+  margin: 0 auto;
   text-align: center;
+  margin-top: 5%;
   width: 100%;
   font-size: 1.5vw;
-  color: aqua;
+  color: rgb(0, 0, 0);
+  font-family: 'Javanese';
 }
 .ueberschrift{
   font-family: 'Roboto', sans-serif;
@@ -129,9 +135,13 @@
   border-spacing: 100px;
   border-style: solid;
   border-color: #E9D2B0;
-  margin-left: 160px;
-  
-  
+  margin-left: 160px; 
+}
+
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
   
 }
 
