--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
 
 
 .categoryBtn{
-    width: 120px;
-    height: 100px;
+    width: 90%;
+    height: 226px;
     /* margin: 0 auto; */
     margin-bottom: 20px;
     background-color: rgb(252, 247, 247);
@@ -17,7 +17,7 @@
 
 .categoryLogo{
   margin: 0 auto;
-  width: 60px;
+  width: 50%;
 }
 
 .categoryBtn:hover{
@@ -26,16 +26,33 @@
     color: #111;
 }
 .kurzeInformationZurSchlagzeile{
-  position: absolute;
-  color: #050301;
+  color: #ffffff;
+  text-align: center;
+  height: 20%;
 }
 
 
 .blogPost{
   text-align: left;
+  background-color: #144145;
+  border-radius: 27px;
+  margin-bottom: 30px;
 }
 
+.imageContainer{
+  width: 49%;
+  display: inline-block;
+}
+.textContainer{
+  width: 49%;
+  display: inline;
+}
 
+.contentImage{
+  width: 100%;
+  border-radius: 27px;
+  margin-right: 10px;
+}
 
 
 .header{
@@ -59,10 +76,6 @@
   font-size: 50px;
 }
 
-.siteContent{
-    font-family: 'Roboto', sans-serif;
-    margin-left: 160px;
-}
 
 .vertical-center {
   margin: 0;
@@ -86,15 +99,55 @@
   margin: auto;
 }
 
+.siteContent{
+  top: 10px;
+  margin: 10px;
+  margin-left: 390px ;
+  height: 100%;
+  background-color: #232323;
+  padding: 20px;
+  border-radius: 27px;
+}
+
+
+.contentHeader{
+  width: 100%;
+  margin: 0 auto;
+  stroke: none;
+  background-color: #E9D2B0;
+  border-radius: 27px;
+  width: 80%;
+  height: 185px;
+  margin-bottom: 30px;
+}
+
+.contentTitle{
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+  font-size: 4vw;
+  color: rgb(0, 0, 0);
+  font-family: 'Javanese';
+
+}
+
+
+.loginButton{
+  margin: auto;
+  margin-right: 10px;
+  height: 50px;
+  width: 50px;
+
+}
 /* The sidebar menu */ /* source @ https://www.w3schools.com/howto/howto_css_fixed_sidebar.asp */
 .sidebar {
     height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 160px; /*Set the width of the sidebar*/
+    width: 380px; /*Set the width of the sidebar*/
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
     z-index: 1; 
     top: 0; /* Stay at the top */
     left: 0;
-    background-color: rgb(0, 0, 0); /* Black */
+    background-color: #232323; /* Black */
     overflow-x: hidden; /* Disable horizontal scroll */
     overflow: hidden;
     
@@ -111,7 +164,7 @@
 
 .titleContainer{
   width: 100%;
-  height: 50px;
+  height: 130px;
   overflow: hidden;
   color: rgb(0, 0, 0);
   background-color: #E9D2B0;
@@ -124,7 +177,7 @@
   text-align: center;
   margin-top: 5%;
   width: 100%;
-  font-size: 1.5vw;
+  font-size: 4vw;
   color: rgb(0, 0, 0);
   font-family: 'Javanese';
 }
@@ -135,16 +188,16 @@
   border-spacing: 100px;
   border-style: solid;
   border-color: #E9D2B0;
-  margin-left: 160px; 
+  margin-left: 380px; 
 }
 
 .vertical-center {
   margin: 0;
-  position: absolute;
+  position: relative;
   top: 50%;
-  
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
-
 
 
 
@@ -167,7 +220,7 @@
   
   /* Style page content */
   .main {
-    margin-left: 160px; /* Same as the width of the sidebar */
+    margin-left: 380px; /* Same as the width of the sidebar */
     padding: 0px 10px;
   }
   
