--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
 
-.test{
-    background-color: rgb(41, 58, 212);
-}
-
 
 .categoryBtn{
     width: 90%;
@@ -25,33 +21,44 @@
     background-color: #E9D2B0;
     color: #111;
 }
+
+.textContainer{
+  float: left;
+  margin-top: 3%;
+  width: 45%;
+  height: 100%;
+}
+
 .kurzeInformationZurSchlagzeile{
   color: #ffffff;
-  text-align: center;
-  height: 20%;
+  text-align: left;
+  margin: 0 auto;
+  font-size: 2vw;
 }
 
 
 .blogPost{
   text-align: left;
   background-color: #144145;
+  height: 385px;
+  width: 100%;
   border-radius: 27px;
   margin-bottom: 30px;
 }
 
 .imageContainer{
+  float: left;
   width: 49%;
-  display: inline-block;
+  height: 100%;
+  padding-right: 2%;
 }
-.textContainer{
-  width: 49%;
-  display: inline;
-}
+
 
 .contentImage{
   width: 100%;
   border-radius: 27px;
-  margin-right: 10px;
+  object-fit: cover;
+  height: 100%;
 }
 
 
@@ -141,23 +148,22 @@
 }
 /* The sidebar menu */ /* source @ https://www.w3schools.com/howto/howto_css_fixed_sidebar.asp */
 .sidebar {
-    height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 380px; /*Set the width of the sidebar*/
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; 
-    top: 0; /* Stay at the top */
-    left: 0;
-    background-color: #232323; /* Black */
-    overflow-x: hidden; /* Disable horizontal scroll */
-    overflow: hidden;
-    
-  }
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 380px; /*Set the width of the sidebar*/
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; 
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #232323; /* Black */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  overflow: hidden;
+}
   
 .CategoryBtnContainer{
   /* overflow: hidden; */
   overflow-y: scroll;
   width: 100%;
-  height: 95%;
+  height: 85%;
   margin: 20px;
   overflow-x: hidden; /* Disable horizontal scroll */
 }
@@ -201,31 +207,30 @@
 
 
 
-  /* The navigation menu links */
-  .sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-family: 'Roboto', sans-serif;
-    font-size: 40px;
-    color: #ffffff;
-    display: block;
-  }
-  
-  /* When you mouse over the navigation links, change their color */
-  .sidenav a:hover {
-    color: #f1f1f1;
-  }
+/* The navigation menu links */
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  font-size: 40px;
+  color: #ffffff;
+  display: block;
+}
 
-  
-  
-  /* Style page content */
-  .main {
-    margin-left: 380px; /* Same as the width of the sidebar */
-    padding: 0px 10px;
-  }
-  
-  /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+
+
+/* Style page content */
+.main {
+  background-color: #ffebd2;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
